WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250640
Entity storage is not very compact
https://bugs.webkit.org/show_bug.cgi?id=250640
Summary
Entity storage is not very compact
Ahmad Saleem
Reported
2023-01-15 04:00:14 PST
Hi Team, While going through Blink's commit, I came across another potential optimization: Blink Commit -
https://chromium.googlesource.com/chromium/blink/+/0c7555da9c7b6059b8f55820b5b21685469a42c1
Benefits: The binary will shrink by about 20-35 KB (depending on architecture), the memory usage should shrink by similar numbers for every renderer (since the memory now can be shared between renderers) and there will be a tiny startup time improvement due to fewer relocation blocks and less to read from disk. Just wanted to raise to see if we can do 1-1 merge or if we can come up with similar. Thanks!
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-01-22 04:01:18 PST
<
rdar://problem/104525785
>
Ahmad Saleem
Comment 2
2023-02-28 15:46:28 PST
Just unscientific test to see whether it regress Speedometer 2.1 by compiling with trunk (
260964@main
) and few other test patches and applying this and before and after the scored remain same on M1 Pro 16 GB using macOS Ventura 13.2.1. I am not sure on memory saving part but just wanted to share update on Speedometer side. If you want me to run any particular benchmark etc., happy to run and happy to do PR as well, if anyone want.
EWS
Comment 3
2023-03-05 13:48:45 PST
Committed
261245@main
(6c9eb0e31985): <
https://commits.webkit.org/261245@main
> Reviewed commits have been landed. Closing PR #10888 and removing active labels.
Darin Adler
Comment 4
2023-03-05 15:46:57 PST
***
Bug 253360
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug